--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -105,7 +105,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bloque_blanco"
             android:layout_width="0dp"
-            android:layout_height="650dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="30dp"
             android:background="@color/white"
             android:orientation="vertical"
@@ -210,8 +210,10 @@
                 android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_login"
+                app:layout_constraintVertical_bias="0.122" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
