--- a/app/src/main/res/layout/estudio_layout.xml
+++ b/app/src/main/res/layout/estudio_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/resultados_rec"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -44,14 +44,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"></TextView>
 
+        <TextView
+            android:id="@+id/signo"
+            style="@style/Widget.Inventory.ListItemTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="-4dp"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@+id/estudio_des"
+            android:text="$"
+            android:textAlignment="textStart"
+            android:textColor="@color/white"
+            card_view:layout_constraintHorizontal_weight="1"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"></TextView>
+
         <ImageView
             android:id="@+id/estudio_mas"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
+            android:layout_marginStart="85dp"
             android:layout_marginLeft="65dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
+            android:layout_toEndOf="@+id/estudio_price"
             card_view:srcCompat="@android:drawable/ic_input_add" />
 
     </RelativeLayout>
