--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -139,6 +139,7 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cancelarReg" />
 
