--- a/app/src/main/res/layout/activity_estudio.xml
+++ b/app/src/main/res/layout/activity_estudio.xml
@@ -93,7 +93,7 @@
         android:layout_width="0dp"
         android:layout_height="700dp"
         android:layout_marginBottom="200dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryVariant"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/estudio_titulo"
