--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,17 +23,15 @@
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="42dp"
-            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="2dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/logo"
             android:contentDescription="@string/logo"
             android:foregroundGravity="center|center_horizontal"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/perfil"
-            app:layout_constraintStart_toEndOf="@+id/menu"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="70dp"
