--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -22,7 +22,6 @@
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="42dp"
-            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/logo"
@@ -30,6 +29,7 @@
             android:foregroundGravity="center|center_horizontal"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TouchTargetSizeCheck"
