--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -89,8 +89,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/authLayout"
-        android:layout_width="397dp"
-        android:layout_height="785dp"
+        android:layout_width="395dp"
+        android:layout_height="730dp"
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,10 +99,11 @@
         app:layout_constraintTop_toBottomOf="@+id/horizontal_nav_bar">
 
         <ScrollView
-            android:layout_width="426dp"
-            android:layout_height="707dp"
+            android:layout_width="393dp"
+            android:layout_height="720dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -121,7 +122,8 @@
                     android:id="@+id/id_d_usuario"
                     android:layout_width="match_parent"
                     android:layout_height="46dp"
-                    android:background="#c4c4c4">
+                    android:background="#c4c4c4"
+                    tools:layout_editor_absoluteY="43dp">
 
                     <TextView
                         android:id="@+id/Id_usuario"
@@ -168,7 +170,7 @@
                 <FrameLayout
                     android:id="@+id/resultadosFL"
                     android:layout_width="match_parent"
-                    android:layout_height="453dp"
+                    android:layout_height="353dp"
                     android:background="#c4c4c4">
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -207,8 +209,8 @@
                         app:layoutManager="LinearLayoutManager" /> -->
                     <TextView
                         android:id="@+id/textView11"
-                        android:layout_width="346dp"
-                        android:layout_height="103dp"
+                        android:layout_width="352dp"
+                        android:layout_height="match_parent"
                         android:text="TextView" />
                 </FrameLayout>
 
